@@ -878,6 +878,11 @@ project('spring-integration-scripting') {
 
         testRuntimeOnly 'org.jetbrains.kotlin:kotlin-scripting-compiler-embeddable'
     }
+
+    tasks.withType(JavaForkOptions) {
+        jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+    }
 }
 
 project('spring-integration-security') {
